--- a/1_5commonly_used_function.ipynb
+++ b/1_5commonly_used_function.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9fdt6z3ZtFf69miEyfRHF",
+      "authorship_tag": "ABX9TyPI5/mQDlNVW59A1+p/iiWs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "# assign_sub()\n",
         "# tf.one_hot()\n",
         "# tf.nn.softmax()\n",
-        "#tf,argmax"
+        "#tf.argmax"
       ],
       "metadata": {
         "id": "ORxtd4QSoKqm"
@@ -199,10 +199,43 @@
     {
       "cell_type": "code",
       "source": [
-        "#tf,argmax返回"
+        "\n",
+        "#tf,argmax返回指定维度最大值的索引\n",
+        "#tf,argmax（tensor名，axis=0/1）\n",
+        "import numpy as np\n",
+        "a=np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+        "print(a)\n",
+        "print(tf.argmax(a,axis=1))\n",
+        "print(tf.argmax(a,axis=0))#因为中文，和括号报错好几次\n",
+        "# 最大值索引都是2"
       ],
       "metadata": {
-        "id": "ekGI8CdBqh9o"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ekGI8CdBqh9o",
+        "outputId": "78c923a6-f3ab-4898-c395-045bb3b69e1e"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]\n",
+            " [7 8 9]]\n",
+            "tf.Tensor([2 2 2], shape=(3,), dtype=int64)\n",
+            "tf.Tensor([2 2 2], shape=(3,), dtype=int64)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1BOwv1GM5chG"
       },
       "execution_count": null,
       "outputs": []
