--- a/1_6load_iris_dataset.ipynb
+++ b/1_6load_iris_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcwR3u/EkFul1uy2sLLVJH",
+      "authorship_tag": "ABX9TyO5Tm1NTgUgf/GaoX8nh3Qc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,179 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6hqXayF25wbq",
-        "outputId": "ae8a3498-6e73-46db-ba8a-5dc9bfc7e34b"
+        "id": "6hqXayF25wbq"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[5.1 3.5 1.4 0.2]\n",
-            " [4.9 3.  1.4 0.2]\n",
-            " [4.7 3.2 1.3 0.2]\n",
-            " [4.6 3.1 1.5 0.2]\n",
-            " [5.  3.6 1.4 0.2]\n",
-            " [5.4 3.9 1.7 0.4]\n",
-            " [4.6 3.4 1.4 0.3]\n",
-            " [5.  3.4 1.5 0.2]\n",
-            " [4.4 2.9 1.4 0.2]\n",
-            " [4.9 3.1 1.5 0.1]\n",
-            " [5.4 3.7 1.5 0.2]\n",
-            " [4.8 3.4 1.6 0.2]\n",
-            " [4.8 3.  1.4 0.1]\n",
-            " [4.3 3.  1.1 0.1]\n",
-            " [5.8 4.  1.2 0.2]\n",
-            " [5.7 4.4 1.5 0.4]\n",
-            " [5.4 3.9 1.3 0.4]\n",
-            " [5.1 3.5 1.4 0.3]\n",
-            " [5.7 3.8 1.7 0.3]\n",
-            " [5.1 3.8 1.5 0.3]\n",
-            " [5.4 3.4 1.7 0.2]\n",
-            " [5.1 3.7 1.5 0.4]\n",
-            " [4.6 3.6 1.  0.2]\n",
-            " [5.1 3.3 1.7 0.5]\n",
-            " [4.8 3.4 1.9 0.2]\n",
-            " [5.  3.  1.6 0.2]\n",
-            " [5.  3.4 1.6 0.4]\n",
-            " [5.2 3.5 1.5 0.2]\n",
-            " [5.2 3.4 1.4 0.2]\n",
-            " [4.7 3.2 1.6 0.2]\n",
-            " [4.8 3.1 1.6 0.2]\n",
-            " [5.4 3.4 1.5 0.4]\n",
-            " [5.2 4.1 1.5 0.1]\n",
-            " [5.5 4.2 1.4 0.2]\n",
-            " [4.9 3.1 1.5 0.2]\n",
-            " [5.  3.2 1.2 0.2]\n",
-            " [5.5 3.5 1.3 0.2]\n",
-            " [4.9 3.6 1.4 0.1]\n",
-            " [4.4 3.  1.3 0.2]\n",
-            " [5.1 3.4 1.5 0.2]\n",
-            " [5.  3.5 1.3 0.3]\n",
-            " [4.5 2.3 1.3 0.3]\n",
-            " [4.4 3.2 1.3 0.2]\n",
-            " [5.  3.5 1.6 0.6]\n",
-            " [5.1 3.8 1.9 0.4]\n",
-            " [4.8 3.  1.4 0.3]\n",
-            " [5.1 3.8 1.6 0.2]\n",
-            " [4.6 3.2 1.4 0.2]\n",
-            " [5.3 3.7 1.5 0.2]\n",
-            " [5.  3.3 1.4 0.2]\n",
-            " [7.  3.2 4.7 1.4]\n",
-            " [6.4 3.2 4.5 1.5]\n",
-            " [6.9 3.1 4.9 1.5]\n",
-            " [5.5 2.3 4.  1.3]\n",
-            " [6.5 2.8 4.6 1.5]\n",
-            " [5.7 2.8 4.5 1.3]\n",
-            " [6.3 3.3 4.7 1.6]\n",
-            " [4.9 2.4 3.3 1. ]\n",
-            " [6.6 2.9 4.6 1.3]\n",
-            " [5.2 2.7 3.9 1.4]\n",
-            " [5.  2.  3.5 1. ]\n",
-            " [5.9 3.  4.2 1.5]\n",
-            " [6.  2.2 4.  1. ]\n",
-            " [6.1 2.9 4.7 1.4]\n",
-            " [5.6 2.9 3.6 1.3]\n",
-            " [6.7 3.1 4.4 1.4]\n",
-            " [5.6 3.  4.5 1.5]\n",
-            " [5.8 2.7 4.1 1. ]\n",
-            " [6.2 2.2 4.5 1.5]\n",
-            " [5.6 2.5 3.9 1.1]\n",
-            " [5.9 3.2 4.8 1.8]\n",
-            " [6.1 2.8 4.  1.3]\n",
-            " [6.3 2.5 4.9 1.5]\n",
-            " [6.1 2.8 4.7 1.2]\n",
-            " [6.4 2.9 4.3 1.3]\n",
-            " [6.6 3.  4.4 1.4]\n",
-            " [6.8 2.8 4.8 1.4]\n",
-            " [6.7 3.  5.  1.7]\n",
-            " [6.  2.9 4.5 1.5]\n",
-            " [5.7 2.6 3.5 1. ]\n",
-            " [5.5 2.4 3.8 1.1]\n",
-            " [5.5 2.4 3.7 1. ]\n",
-            " [5.8 2.7 3.9 1.2]\n",
-            " [6.  2.7 5.1 1.6]\n",
-            " [5.4 3.  4.5 1.5]\n",
-            " [6.  3.4 4.5 1.6]\n",
-            " [6.7 3.1 4.7 1.5]\n",
-            " [6.3 2.3 4.4 1.3]\n",
-            " [5.6 3.  4.1 1.3]\n",
-            " [5.5 2.5 4.  1.3]\n",
-            " [5.5 2.6 4.4 1.2]\n",
-            " [6.1 3.  4.6 1.4]\n",
-            " [5.8 2.6 4.  1.2]\n",
-            " [5.  2.3 3.3 1. ]\n",
-            " [5.6 2.7 4.2 1.3]\n",
-            " [5.7 3.  4.2 1.2]\n",
-            " [5.7 2.9 4.2 1.3]\n",
-            " [6.2 2.9 4.3 1.3]\n",
-            " [5.1 2.5 3.  1.1]\n",
-            " [5.7 2.8 4.1 1.3]\n",
-            " [6.3 3.3 6.  2.5]\n",
-            " [5.8 2.7 5.1 1.9]\n",
-            " [7.1 3.  5.9 2.1]\n",
-            " [6.3 2.9 5.6 1.8]\n",
-            " [6.5 3.  5.8 2.2]\n",
-            " [7.6 3.  6.6 2.1]\n",
-            " [4.9 2.5 4.5 1.7]\n",
-            " [7.3 2.9 6.3 1.8]\n",
-            " [6.7 2.5 5.8 1.8]\n",
-            " [7.2 3.6 6.1 2.5]\n",
-            " [6.5 3.2 5.1 2. ]\n",
-            " [6.4 2.7 5.3 1.9]\n",
-            " [6.8 3.  5.5 2.1]\n",
-            " [5.7 2.5 5.  2. ]\n",
-            " [5.8 2.8 5.1 2.4]\n",
-            " [6.4 3.2 5.3 2.3]\n",
-            " [6.5 3.  5.5 1.8]\n",
-            " [7.7 3.8 6.7 2.2]\n",
-            " [7.7 2.6 6.9 2.3]\n",
-            " [6.  2.2 5.  1.5]\n",
-            " [6.9 3.2 5.7 2.3]\n",
-            " [5.6 2.8 4.9 2. ]\n",
-            " [7.7 2.8 6.7 2. ]\n",
-            " [6.3 2.7 4.9 1.8]\n",
-            " [6.7 3.3 5.7 2.1]\n",
-            " [7.2 3.2 6.  1.8]\n",
-            " [6.2 2.8 4.8 1.8]\n",
-            " [6.1 3.  4.9 1.8]\n",
-            " [6.4 2.8 5.6 2.1]\n",
-            " [7.2 3.  5.8 1.6]\n",
-            " [7.4 2.8 6.1 1.9]\n",
-            " [7.9 3.8 6.4 2. ]\n",
-            " [6.4 2.8 5.6 2.2]\n",
-            " [6.3 2.8 5.1 1.5]\n",
-            " [6.1 2.6 5.6 1.4]\n",
-            " [7.7 3.  6.1 2.3]\n",
-            " [6.3 3.4 5.6 2.4]\n",
-            " [6.4 3.1 5.5 1.8]\n",
-            " [6.  3.  4.8 1.8]\n",
-            " [6.9 3.1 5.4 2.1]\n",
-            " [6.7 3.1 5.6 2.4]\n",
-            " [6.9 3.1 5.1 2.3]\n",
-            " [5.8 2.7 5.1 1.9]\n",
-            " [6.8 3.2 5.9 2.3]\n",
-            " [6.7 3.3 5.7 2.5]\n",
-            " [6.7 3.  5.2 2.3]\n",
-            " [6.3 2.5 5.  1.9]\n",
-            " [6.5 3.  5.2 2. ]\n",
-            " [6.2 3.4 5.4 2.3]\n",
-            " [5.9 3.  5.1 1.8]]\n",
-            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-            " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
-            " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
-            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
-            " 2 2]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# features: 'Sepal length', 'Sepal width', 'Petal length', 'Petal width'\n",
+        "# features: 'Sepal length'花萼, 'Sepal width', 'Petal花瓣 length', 'Petal width'\n",
         "# classes:0:setosa iris 1:versicolour iris 2:virginica iris \n",
         "# 可以从sklearn读入数据集\n",
         "from sklearn import datasets\n",
@@ -211,6 +45,83 @@
         "y_data=datasets.load_iris().target#all labels of the datasets\n",
         "print(x_data)\n",
         "print(y_data)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 接下来用dataframe变成表格的形式。每一列加一个标签\n",
+        "x_data=DataFrame(x_data,columns=['sepal length','sepal width','petal length','petal width'])\n",
+        "#设置列对齐\n",
+        "pd.set_option('display.unicode.east_asian_width',True)#T大写\n",
+        "print(x_data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F2rv7Rgh8HDN",
+        "outputId": "e0b3c8ac-f097-40a7-b940-512451ea4821"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     sepal length  sepal width  petal length  petal width\n",
+            "0             5.1          3.5           1.4          0.2\n",
+            "1             4.9          3.0           1.4          0.2\n",
+            "2             4.7          3.2           1.3          0.2\n",
+            "3             4.6          3.1           1.5          0.2\n",
+            "4             5.0          3.6           1.4          0.2\n",
+            "..            ...          ...           ...          ...\n",
+            "145           6.7          3.0           5.2          2.3\n",
+            "146           6.3          2.5           5.0          1.9\n",
+            "147           6.5          3.0           5.2          2.0\n",
+            "148           6.2          3.4           5.4          2.3\n",
+            "149           5.9          3.0           5.1          1.8\n",
+            "\n",
+            "[150 rows x 4 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_data['classes']=y_data\n",
+        "print(x_data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rOQMcxIy9Yv_",
+        "outputId": "4bd6bbc3-1ee5-46eb-fd9b-72c26999d2e3"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     sepal length  sepal width  petal length  petal width  classes\n",
+            "0             5.1          3.5           1.4          0.2        0\n",
+            "1             4.9          3.0           1.4          0.2        0\n",
+            "2             4.7          3.2           1.3          0.2        0\n",
+            "3             4.6          3.1           1.5          0.2        0\n",
+            "4             5.0          3.6           1.4          0.2        0\n",
+            "..            ...          ...           ...          ...      ...\n",
+            "145           6.7          3.0           5.2          2.3        2\n",
+            "146           6.3          2.5           5.0          1.9        2\n",
+            "147           6.5          3.0           5.2          2.0        2\n",
+            "148           6.2          3.4           5.4          2.3        2\n",
+            "149           5.9          3.0           5.1          1.8        2\n",
+            "\n",
+            "[150 rows x 5 columns]\n"
+          ]
+        }
       ]
     }
   ]
