--- a/1_7NN_for_Iris_Classification.ipynb
+++ b/1_7NN_for_Iris_Classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOrR9WM2oGx1ndZRbeP7Xs",
+      "authorship_tag": "ABX9TyMus2vhaiVt17jSaP+2AayA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "rZ8gBsRIAqHr"
       },
-      "execution_count": 7,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "bkr-hyhNA3QS"
       },
-      "execution_count": 9,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -90,18 +90,97 @@
       "metadata": {
         "id": "P8z_glNHBUIf"
       },
-      "execution_count": 10,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#features和labels打包，每次喂入一小撮32个\n"
+        "#转换x的数据类型。防止矩阵相乘时因为数据类型不同而报错\n",
+        "x_train=tf.cast(x_train,tf.float32)\n",
+        "x_test=tf.cast(x_test,tf.float32)"
+      ],
+      "metadata": {
+        "id": "L2J9UJ2kK5EH"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#features和labels打包，每次喂入一小撮32个\n",
+        "train_db=tf.data.Dataset.from_tensor_slices((x_train,y_train)).batch(32)\n",
+        "test_db=tf.data.Dataset.from_tensor_slices((x_test,y_test)).batch(32)"
       ],
       "metadata": {
         "id": "xLWz7Ey4EQlv"
       },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 定义神经网络所有可训练参数\n",
+        "# 生成神经网络的参数，4个输入特征，输入层为4个输入节点；因为3分类，故输出层为3个神经元\n",
+        "# 用tf.Variable()标记参数可训练\n",
+        "# 使用seed使每次生成的随机数相同（方便教学，使大家结果都一致，在现实使用时不写seed）\n",
+        "#以下是阶段正态分布\n",
+        "w1=tf.Variable(tf.random.truncated_normal([4,3],stddev=0.1,seed=1))\n",
+        "b1=tf.Variable(tf.random.truncated_normal[3],stddev=0.1,seed=1)#b和classes的数量必须保持一致\n",
+        "#这里报错，等写完整个函数看看\n",
+        "print(w1,b1)"
+      ],
+      "metadata": {
+        "id": "LRchSxOSFCsC"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#定义超参数和画图用的两个空列表\n",
+        "lr=0.1\n",
+        "train_loss_result=[]# 将每轮的loss记录在此列表中，为后续画loss曲线提供数据\n",
+        "test_acc = []  # 将每轮的acc记录在此列表中，为后续画acc曲线提供数据\n",
+        "epoch = 50  # 循环500轮\n",
+        "loss_all = 0  # 每轮分4个step，loss_all记录四个step生成的4个loss的和\n",
+        "#4轮是因为batch是32，120个分了四个batch吗\n"
+      ],
+      "metadata": {
+        "id": "b-XA2W0_KIRM"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#准备工作做好了，接下来就是训练和测试部分了\n",
+        "for epoch in range(epoch):#数据集级别的循环，每个epoch循环一次数据集\n",
+        "    for setp,(x_train,y_train) in enumerate(train_db):#batch级别的循环 ，每个step循环一个batch\n",
+        "        with tf.GradientTape() as tape: # with结构记录梯度信息\n",
+        "            y = tf.matmul(x_train,w1) + b1  # 神经网络乘加运算，也就是x_train和w1两个矩阵相乘\n",
+        "            #这里为什么x——train和w1能保证是可以相乘的矩阵啊\n",
+        "\n",
+        "            y = tf.nn.softmax(y)  # 使输出y符合概率分布（此操作后与独热码同量级，可相减求loss）\n",
+        "            y_=tf.one_hot(y_train,depth=3)#因为输出是三种\n",
+        "            loss=tf.reduce_mean(tf.square(y-y_))# 采用均方误差损失函数mse = mean(sum(y-out)^2)\n",
+        "            loss_all+=loss.numpy()# 将每个step计算出的loss累加，为后续求loss平均值提供数据，这样计算的loss更准确\n",
+        "            #这步的loss.numpy是什么意思\n",
+        "            # 接下来计算loss对各个参数的梯度\n",
+        "        grads=tape.gradients(loss,[w1,b1])\n",
+        "        # 实现梯度更新 w1 = w1 - lr * w1_grad    b = b - lr * b_grad\n",
+        "        w1.assign_sub(lr*grads[0])#这里0和1什么意思\n",
+        "        b1.assign_sub(lr*grads[1])\n",
+        "    # 每个epoch，打印loss信息"
+      ],
+      "metadata": {
+        "id": "8SfCFWTtLg1p"
+      },
+      "execution_count": 33,
       "outputs": []
     }
   ]
