--- a/3_3MNIST_Dataset.ipynb
+++ b/3_3MNIST_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiFe0ZKI/K0Z1j8Lkul/ST",
+      "authorship_tag": "ABX9TyPFAKec/vY5TevLfWqyCgeV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -305,13 +305,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# 实现手写数字识别\n",
+        "# sequential实现手写数字识别\n",
         "import tensorflow as tf\n",
-        "\n",
         "mnist=tf.keras.datasets.mnist\n",
         "(x_train,y_train),(x_test,y_test)=mnist.load_data()\n",
         "x_train,x_test=x_train/255.0,x_test/255.0#归一化\n",
-        "\n",
         "model=tf.keras.models.Sequential([\n",
         "    tf.keras.layers.Flatten(),#把输入特征拉直为一维数组。748个数值\n",
         "    tf.keras.layers.Dense(128,activation='relu'),#第一层有128个神经元。\n",
@@ -355,6 +353,84 @@
             " dense (Dense)               (None, 128)               100480    \n",
             "                                                                 \n",
             " dense_1 (Dense)             (None, 10)                1290      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 101,770\n",
+            "Trainable params: 101,770\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# class实现手写数字识别\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.layers import Dense, Flatten\n",
+        "from tensorflow.keras import Model\n",
+        "\n",
+        "mnist = tf.keras.datasets.mnist\n",
+        "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
+        "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
+        "\n",
+        "\n",
+        "class MnistModel(Model):\n",
+        "    def __init__(self):\n",
+        "        super(MnistModel, self).__init__()\n",
+        "        self.flatten = Flatten()#拉直\n",
+        "        self.d1 = Dense(128, activation='relu')#第一层\n",
+        "        self.d2 = Dense(10, activation='softmax')#第二层\n",
+        "\n",
+        "    def call(self, x):\n",
+        "        x = self.flatten(x)\n",
+        "        x = self.d1(x)\n",
+        "        y = self.d2(x)\n",
+        "        return y\n",
+        "\n",
+        "\n",
+        "model = MnistModel()\n",
+        "\n",
+        "model.compile(optimizer='adam',\n",
+        "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=False),\n",
+        "              metrics=['sparse_categorical_accuracy'])\n",
+        "\n",
+        "model.fit(x_train, y_train, batch_size=32, epochs=5, validation_data=(x_test, y_test), validation_freq=1)\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xuK7ocvSw9f4",
+        "outputId": "c56cf890-3050-44ec-c242-d9dd81f16511"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2634 - sparse_categorical_accuracy: 0.9245 - val_loss: 0.1460 - val_sparse_categorical_accuracy: 0.9578\n",
+            "Epoch 2/5\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.1151 - sparse_categorical_accuracy: 0.9666 - val_loss: 0.0978 - val_sparse_categorical_accuracy: 0.9715\n",
+            "Epoch 3/5\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0792 - sparse_categorical_accuracy: 0.9762 - val_loss: 0.0881 - val_sparse_categorical_accuracy: 0.9735\n",
+            "Epoch 4/5\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0591 - sparse_categorical_accuracy: 0.9816 - val_loss: 0.0809 - val_sparse_categorical_accuracy: 0.9736\n",
+            "Epoch 5/5\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0449 - sparse_categorical_accuracy: 0.9857 - val_loss: 0.0701 - val_sparse_categorical_accuracy: 0.9788\n",
+            "Model: \"mnist_model\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " flatten_1 (Flatten)         multiple                  0         \n",
+            "                                                                 \n",
+            " dense_2 (Dense)             multiple                  100480    \n",
+            "                                                                 \n",
+            " dense_3 (Dense)             multiple                  1290      \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 101,770\n",
