--- a/5_3padding.ipynb
+++ b/5_3padding.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOH0/mwy9P//F0AJHJXD3E8",
+      "authorship_tag": "ABX9TyP3DYHqc0Di0AKjQ/vasj67",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,11 +37,11 @@
         "# 全0填充\n",
         "# 在输入特征图周围填充0，\n",
         "# 比如5*5的输入图在padding之后，再3*3卷积核，最后还是会得到5*5的输出。\n",
-        "卷积输出特征图维度的计算公式：\n",
-        "全0填充时候，输出特征图边长=输入特征图边长除以卷积核步长（向上取整）\n",
-        "不全0填充：输出特征图边长=（）输入特征图边长-卷积核的边长+1）除以步长\n",
-        "padding=‘SAME'全0填充\n",
-        "padding=‘VALID'非全0填充"
+        "# 卷积输出特征图维度的计算公式：\n",
+        "# 全0填充时候，输出特征图边长=输入特征图边长除以卷积核步长（向上取整）\n",
+        "# 不全0填充：输出特征图边长=（）输入特征图边长-卷积核的边长+1）除以步长\n",
+        "# padding=‘SAME'全0填充\n",
+        "# padding=‘VALID'非全0填充"
       ]
     },
     {
