--- a/5_10_write_a_cnn.ipynb
+++ b/5_10_write_a_cnn.ipynb
@@ -215,10 +215,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "g78itABwnmQ7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g78itABwnmQ7",
+        "outputId": "4ed18f76-8191-4e2a-acdd-0f7cef130a59"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     }
   ]
 }
